[project]
name = "algo-incent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.4.0",
    "datasets>=3.3.1",
    "evaluate>=0.4.3",
    "rich>=13.9.4",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "bitsandbytes>=0.42.0"
]
